cloud/gcp/midas-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: midas-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 84
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: midas-vs
spec:
  hosts:
  - "*"
  gateways:
  - midas-gateway
  http:
  - match:
    - uri:
        exact: /home
    route:
    - destination:
        host: midas-web-deployment
        port:
          number: 80
